--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.1",
+    "flowbite": "^3.1.2",
     "ng2-charts": "^8.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   }
 }
